--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "cd src && nodemon server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write \"**/*.{ts,tsx}\""
   },
   "keywords": [],
   "author": "",
@@ -13,12 +14,17 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-requests-logger": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
+    "prettier": "^3.2.5",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-requests-logger": "^3.0.4",
     "@types/jsonwebtoken": "^9.0.5",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2"
